--- a/editor-de-txt.html
+++ b/editor-de-txt.html
@@ -28,10 +28,10 @@
   <!-- criando um select para navegar entre os conteudos -->  
  <select id="seletor-arquivo" onchange="carregarArquivoSelecionado()">
 
-<option value="termux.txt">Termux</option>      
-<option value="git-github.txt">Git-Github</option>
-<option value="python.txt">Python</option>
-<option value="https://organic-eureka-69vjwppqrwg2r9q6.github.dev/">editor</option>
+<option value="txt/termux.txt">Termux</option>      
+<option value="txt/git-github.txt">Git-Github</option>
+<option value="txt/python.txt">Python</option>
+<option value="txt/https://organic-eureka-69vjwppqrwg2r9q6.github.dev/">editor</option>
    
 
    
