--- a/abp-links.html
+++ b/abp-links.html
@@ -28,7 +28,7 @@
 <ul class="links">
 <li><a href="https://sites.google.com/view/marketing-digital-abp/sobre" target="_blank">portifólio/GOOGLE-SITES</a></li>
 <li><a href="index-com-radio.html" target="_blank">index-com-radio.html</a></li>
-<li><a href="editor-de-txt.html" target="_blank">editor-de-txt.html</a></li>
+<li><a href="aulas-txt.html" target="_blank">editor-de-txt.html</a></li>
 <li><a href="index-basico-radio.html" target="_blank">index-basico-radio.html</a></li>
 <li><a href="ler-arquivo-json.html" target="_blank">ler-arquivo-json.html</a></li>
 <li><a href="lista-de-tarefas.html" target="_blank">lista-de-tarefas.html</a></li>
