--- a/abp-links.html
+++ b/abp-links.html
@@ -47,5 +47,38 @@
 </footer>
 
 </div>  
+  <style>
+* {
+  box-sizing: border-box;
+}
+
+body {
+  font-family: Arial;
+  padding: 10px;
+  background: #f1f1f1;
+}
+    
+/*colunas com 50%*/
+.column {
+  float: left;
+  width: 50%;
+  padding: 15px;
+}
+    
+@media screen and (max-width: 800px) {
+  .leftcolumn, .rightcolumn {   
+    width: 100%;
+    padding: 0;
+  }
+}
+
+
+@media screen and (max-width: 400px) {
+  .topnav a {
+    float: none;
+    width: 100%;
+  }
+}
+    </style>
 </body>
 </html>
