Update and rename abp-links.html to index.html

--- a/index.html
+++ b/index.html
@@ -7,10 +7,24 @@
 <title>Aristies Barbosa Pontes</title>
 </head>
 <body>
-<div class="container">
-<h1>ARISTIDESBP</h1>
+ 
+<div class="header">
+  <h1>ARISTIDESBP</h1>
+  <p>🌟 Bem-vindo ao nosso site! 🌟</p>
+</div>
+<div class="topnav">
+  <a href="#">LINKS</a>
+  <a href="#">PROJETOS</a>
+  <a href="#">CONTATOS</a>
+  <a href="#" style="float:right">Link</a>
+</div>
+  
 
-<!-- ###################################### -->
+
+
+  
+<div class="container">
+
 <div class="column">
 <h2>LINKS</h2>
 <ul class="links">
@@ -39,15 +53,16 @@
 <li><a href="portifolio-w3s.html" target="_blank">portifolio-w3s.html</a></li>      
 </ul>
 </div>
-<!-- ###################################### -->
-
-
+</div>  
+  
+  
 <footer>
 <p>&copy; 2025 - Todos os direitos reservados</p>
 </footer>
 
-</div>  
-  <style>
+
+  
+<style>
 * {
   box-sizing: border-box;
 }
@@ -65,20 +80,7 @@ body {
   padding: 15px;
 }
     
-@media screen and (max-width: 800px) {
-  .leftcolumn, .rightcolumn {   
-    width: 100%;
-    padding: 0;
-  }
-}
 
-
-@media screen and (max-width: 400px) {
-  .topnav a {
-    float: none;
-    width: 100%;
-  }
-}
     </style>
 </body>
 </html>
