--- a/index.html
+++ b/index.html
@@ -1,86 +1,172 @@
+<!-- Define que este é um documento HTML5 -->
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-br"> <!-- Define o idioma da página como português do Brasil -->
+
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta http-equiv="X-UA-Compatible" content="ie=edge">
-<title>Aristies Barbosa Pontes</title>
+  <meta charset="UTF-8"> <!-- Define a codificação de caracteres como UTF-8 -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Responsividade: ajusta a largura da tela -->
+  <meta http-equiv="X-UA-Compatible" content="IE=edge"> <!-- Compatibilidade com Internet Explorer -->
+  <title>Aristides Barbosa Pontes</title> <!-- Título da aba do navegador -->
+
+  <!-- Importa o arquivo de estilos externos -->
+  <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
- 
-<div class="header">
-  <h1>ARISTIDESBP</h1>
-  <p>🌟 Bem-vindo ao nosso site! 🌟</p>
-</div>
-<div class="topnav">
-  <a href="#">LINKS</a>
-  <a href="#">PROJETOS</a>
-  <a href="#">CONTATOS</a>
-  <a href="#" style="float:right">Link</a>
-</div>
-  
+  <!-- Cabeçalho da página -->
+  <header class="header">
+    <h1 id="tituloSite">ARISTIDESBP</h1> <!-- Título principal do site -->
+    <p class="boasVindas">🌟 Bem-vindo ao nosso site! 🌟</p> <!-- Mensagem de boas-vindas -->
+  </header>
 
+  <!-- Navegação superior -->
+  <nav class="topnav">
+    <!-- Menu de navegação com links -->
+    <a href="#">LINKS</a>
+    <a href="#">PROJETOS</a>
+    <a href="#">CONTATOS</a>
+    <a href="#" class="nav-direita">Link</a> <!-- Link alinhado à direita -->
+  </nav>
 
+  <!-- Container principal com duas colunas -->
+  <main class="container">
 
-  
-<div class="container">
+    <!-- Coluna de links úteis -->
+    <section class="column" id="coluna-links">
+      <h2>LINKS</h2>
+      <ul class="lista-links">
+        <!-- Lista de links úteis -->
+        <li><a href="https://github.com/aristidesbp" target="_blank">GitHub</a></li>
+        <li><a href="https://gemini.google.com/app?hl=pt-BR" target="_blank">Gemini</a></li>
+        <li><a href="https://chatgpt.com/" target="_blank">ChatGPT</a></li>
+        <li><a href="https://www.w3schools.com/" target="_blank">W3Schools</a></li>
+        <li><a href="https://developer.mozilla.org/" target="_blank">MDN Web Docs</a></li>
+        <li><a href="https://www.freecodecamp.org/" target="_blank">freeCodeCamp</a></li>
+      </ul>
+    </section>
 
-<div class="column">
-<h2>LINKS</h2>
-<ul class="links">
-<li><a href="https://github.com/aristidesbp" class="github" target="_blank" rel="noopener">GitHub</a></li> 
-<li><a href="https://gemini.google.com/app?hl=pt-BR" class="w3" target="_blank" rel="noopener">gemini.google</a></li> 
-<li><a href="https://chatgpt.com/" class="w3" target="_blank" rel="noopener">chatgpt.com</a></li> 
-<li><a href="https://www.w3schools.com/" class="w3" target="_blank" rel="noopener">W3Schools</a></li>  
-<li><a href="https://developer.mozilla.org/" class="mdn" target="_blank" rel="noopener">MDN Web Docs</a></li>  
-<li><a href="https://www.freecodecamp.org/" class="fcc" target="_blank" rel="noopener">freeCodeCamp</a></li>    
-</ul> 
-</div> 
+    <!-- Coluna de projetos -->
+    <section class="column" id="coluna-projetos">
+      <h2>PROJETOS</h2>
+      <ul class="lista-links">
+        <!-- Lista de projetos com links -->
+        <li><a href="https://sites.google.com/view/marketing-digital-abp/sobre" target="_blank">Portfólio Google Sites</a></li>
+        <li><a href="index-com-radio.html" target="_blank">index-com-radio.html</a></li>
+        <li><a href="aulas-txt.html" target="_blank">editor-de-txt.html</a></li>
+        <li><a href="index-basico-radio.html" target="_blank">index-basico-radio.html</a></li>
+        <li><a href="ler-arquivo-json.html" target="_blank">ler-arquivo-json.html</a></li>
+        <li><a href="lista-de-tarefas.html" target="_blank">lista-de-tarefas.html</a></li>
+        <li><a href="lista-de-tarefas2.html" target="_blank">lista-de-tarefas2.html</a></li>
+        <li><a href="plays.html" target="_blank">plays.html</a></li>
+        <li><a href="portifolio-interativo.html" target="_blank">portifolio-interativo.html</a></li>
+        <li><a href="portifolio-w3s.html" target="_blank">portifolio-w3s.html</a></li>
+      </ul>
+    </section>
 
-<div class="column">
-<h2>PROJETOS</h2>
-<ul class="links">
-<li><a href="https://sites.google.com/view/marketing-digital-abp/sobre" target="_blank">portifólio/GOOGLE-SITES</a></li>
-<li><a href="index-com-radio.html" target="_blank">index-com-radio.html</a></li>
-<li><a href="aulas-txt.html" target="_blank">editor-de-txt.html</a></li>
-<li><a href="index-basico-radio.html" target="_blank">index-basico-radio.html</a></li>
-<li><a href="ler-arquivo-json.html" target="_blank">ler-arquivo-json.html</a></li>
-<li><a href="lista-de-tarefas.html" target="_blank">lista-de-tarefas.html</a></li>
-<li><a href="lista-de-tarefas2.html" target="_blank">lista-de-tarefas2.html</a></li>
-<li><a href="plays.html" target="_blank">plays.html</a></li>
-<li><a href="portifolio-interativo.html" target="_blank">portifolio-interativo.html</a></li>
-<li><a href="portifolio-w3s.html" target="_blank">portifolio-w3s.html</a></li>
-<li><a href="portifolio-w3s.html" target="_blank">portifolio-w3s.html</a></li>      
-</ul>
-</div>
-</div>  
-  
-  
-<footer>
-<p>&copy; 2025 - Todos os direitos reservados</p>
-</footer>
+  </main>
 
-
-  
+  <!-- Rodapé com direitos autorais -->
+  <footer>
+    <p>&copy; 2025 - Todos os direitos reservados</p>
+  </footer>
 <style>
+ /* === CONFIGURAÇÕES GERAIS === */
 * {
-  box-sizing: border-box;
+  box-sizing: border-box; /* Garante que padding e border não aumentem o tamanho dos elementos */
+  margin: 0;              /* Remove margens padrão */
+  padding: 0;             /* Remove preenchimentos padrão */
 }
 
 body {
-  font-family: Arial;
-  padding: 10px;
-  background: #f1f1f1;
+  font-family: Arial, sans-serif; /* Define a fonte do corpo do texto */
+  background-color: #f1f1f1;      /* Cor de fundo cinza claro */
+  padding: 10px;                  /* Espaço interno ao redor do conteúdo */
 }
-    
-/*colunas com 50%*/
-.column {
-  float: left;
-  width: 50%;
-  padding: 15px;
-}
-</style>
 
- 
+/* === CABEÇALHO === */
+.header {
+  text-align: center;      /* Centraliza o conteúdo */
+  padding: 20px 0;         /* Espaço acima e abaixo */
+  background-color: #222;  /* Cor de fundo escura */
+  color: #fff;             /* Texto branco */
+}
+
+/* === NAVEGAÇÃO === */
+.topnav {
+  background-color: #444;  /* Fundo do menu */
+  overflow: hidden;        /* Evita quebra de layout */
+}
+
+.topnav a {
+  float: left;             /* Alinha os links à esquerda */
+  display: block;          /* Ocupa toda a altura */
+  color: white;            /* Cor do texto */
+  text-align: center;      /* Centraliza o texto */
+  padding: 14px 16px;      /* Espaçamento interno */
+  text-decoration: none;   /* Remove sublinhado */
+}
+
+.topnav a:hover {
+  background-color: #ddd;  /* Fundo claro no hover */
+  color: black;            /* Texto escuro no hover */
+}
+
+.nav-direita {
+  float: right;            /* Alinha esse link à direita */
+}
+
+/* === LAYOUT PRINCIPAL === */
+.container {
+  display: flex;         /* Ativa o modelo Flexbox */
+  flex-wrap: wrap;       /* Permite quebras de linha */
+  margin-top: 20px;      /* Espaço superior */
+}
+
+.column {
+  width: 50%;            /* Cada coluna ocupa metade da largura */
+  padding: 15px;         /* Espaçamento interno */
+}
+
+/* === LISTA DE LINKS === */
+.lista-links li {
+  list-style: none;      /* Remove marcadores */
+  margin: 10px 0;        /* Espaçamento entre itens */
+}
+
+.lista-links a {
+  color: #333;           /* Cor escura do link */
+  text-decoration: none; /* Remove sublinhado */
+}
+
+.lista-links a:hover {
+  text-decoration: underline; /* Sublinhado ao passar o mouse */
+}
+
+/* === RODAPÉ === */
+footer {
+  text-align: center;    /* Centraliza o texto */
+  margin-top: 40px;      /* Espaço acima do rodapé */
+  padding: 10px;
+  background-color: #ccc; /* Fundo cinza claro */
+}
+
+/* === RESPONSIVIDADE === */
+@media screen and (max-width: 768px) {
+  .container {
+    flex-direction: column; /* Empilha as colunas verticalmente */
+  }
+
+  .column {
+    width: 100%;            /* Coluna ocupa toda a largura */
+  }
+
+  .topnav a {
+    float: none;            /* Remove alinhamento horizontal */
+    display: block;         /* Cada link ocupa uma linha */
+    text-align: center;     /* Centraliza o texto */
+  }
+}
+
+ </style>
 </body>
 </html>
