--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge"> <!-- Compatibilidade com Internet Explorer -->
   <title>Aristides Barbosa Pontes</title> <!-- Título da aba do navegador -->
 
-  <!-- Importa o arquivo de estilos externos -->
-  <link rel="stylesheet" href="style.css">
+<!-- Importa o arquivo de estilos externos -->
+<link rel="stylesheet" href="css/index.css">
 </head>
 
 <body>
@@ -68,105 +68,9 @@
   <!-- Rodapé com direitos autorais -->
   <footer>
     <p>&copy; 2025 - Todos os direitos reservados</p>
+    <p>Contato: (91) 99242-0981
   </footer>
-<style>
- /* === CONFIGURAÇÕES GERAIS === */
-* {
-  box-sizing: border-box; /* Garante que padding e border não aumentem o tamanho dos elementos */
-  margin: 0;              /* Remove margens padrão */
-  padding: 0;             /* Remove preenchimentos padrão */
-}
 
-body {
-  font-family: Arial, sans-serif; /* Define a fonte do corpo do texto */
-  background-color: #f1f1f1;      /* Cor de fundo cinza claro */
-  padding: 10px;                  /* Espaço interno ao redor do conteúdo */
-}
-
-/* === CABEÇALHO === */
-.header {
-  text-align: center;      /* Centraliza o conteúdo */
-  padding: 20px 0;         /* Espaço acima e abaixo */
-  background-color: #222;  /* Cor de fundo escura */
-  color: #fff;             /* Texto branco */
-}
-
-/* === NAVEGAÇÃO === */
-.topnav {
-  background-color: #444;  /* Fundo do menu */
-  overflow: hidden;        /* Evita quebra de layout */
-}
-
-.topnav a {
-  float: left;             /* Alinha os links à esquerda */
-  display: block;          /* Ocupa toda a altura */
-  color: white;            /* Cor do texto */
-  text-align: center;      /* Centraliza o texto */
-  padding: 14px 16px;      /* Espaçamento interno */
-  text-decoration: none;   /* Remove sublinhado */
-}
-
-.topnav a:hover {
-  background-color: #ddd;  /* Fundo claro no hover */
-  color: black;            /* Texto escuro no hover */
-}
-
-.nav-direita {
-  float: right;            /* Alinha esse link à direita */
-}
-
-/* === LAYOUT PRINCIPAL === */
-.container {
-  display: flex;         /* Ativa o modelo Flexbox */
-  flex-wrap: wrap;       /* Permite quebras de linha */
-  margin-top: 20px;      /* Espaço superior */
-}
-
-.column {
-  width: 50%;            /* Cada coluna ocupa metade da largura */
-  padding: 15px;         /* Espaçamento interno */
-}
-
-/* === LISTA DE LINKS === */
-.lista-links li {
-  list-style: none;      /* Remove marcadores */
-  margin: 10px 0;        /* Espaçamento entre itens */
-}
-
-.lista-links a {
-  color: #333;           /* Cor escura do link */
-  text-decoration: none; /* Remove sublinhado */
-}
-
-.lista-links a:hover {
-  text-decoration: underline; /* Sublinhado ao passar o mouse */
-}
-
-/* === RODAPÉ === */
-footer {
-  text-align: center;    /* Centraliza o texto */
-  margin-top: 40px;      /* Espaço acima do rodapé */
-  padding: 10px;
-  background-color: #ccc; /* Fundo cinza claro */
-}
-
-/* === RESPONSIVIDADE === */
-@media screen and (max-width: 768px) {
-  .container {
-    flex-direction: column; /* Empilha as colunas verticalmente */
-  }
-
-  .column {
-    width: 100%;            /* Coluna ocupa toda a largura */
-  }
-
-  .topnav a {
-    float: none;            /* Remove alinhamento horizontal */
-    display: block;         /* Cada link ocupa uma linha */
-    text-align: center;     /* Centraliza o texto */
-  }
-}
-
- </style>
+<script src="js/index.js">
 </body>
 </html>
