--- a/index.html
+++ b/index.html
@@ -1,18 +1,26 @@
-<!-- Define que este é um documento HTML5 -->
 <!DOCTYPE html>
-<html lang="pt-br"> <!-- Define o idioma da página como português do Brasil -->
-
+<html lang="pt-BR">
 <head>
-  <meta charset="UTF-8"> <!-- Define a codificação de caracteres como UTF-8 -->
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Responsividade: ajusta a largura da tela -->
-  <meta http-equiv="X-UA-Compatible" content="IE=edge"> <!-- Compatibilidade com Internet Explorer -->
-  <title>Aristides Barbosa Pontes</title> <!-- Título da aba do navegador -->
-
-<!-- Importa o arquivo de estilos externos -->
-<link rel="stylesheet" href="css/index.css">
+<link rel="preconnect" href="https://fonts.googleapis.com" />
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="description" content="Portifólio de Aristides Barbosa Pontes, desenvolvedor web Front-end" />
+    <meta name="author" content="Aristides Barbosa Pontes" />
+    <meta property="og:description" content="Portifólio de Aristides Barbosa Pontes, desenvolvedor web Front-end" />
+    <meta property="og:type" content="website" />
+    <meta name="keywords" content="developer, programação, dev, desenvolvedor, programador, html, css, javascript, nodejs, reactjs, react, github, frontend, front-end" />
+    <meta name="robots" content="index" />
+    <title>AristidesBP// Portifólio</title>
+<link href="https://fonts.googleapis.com/css2?family=DM+Sans&family=Gemunu+Libre:wght@200&display=swap" rel="stylesheet"/>
+<script src="https://unpkg.com/scrollreveal"></script>  
+<link rel="stylesheet" href="css/index.css" />
 </head>
-
 <body>
+
+
+  
   <!-- Cabeçalho da página -->
   <header class="header">
     <h1 id="tituloSite">ARISTIDESBP</h1> <!-- Título principal do site -->
