--- a/index.html
+++ b/index.html
@@ -27,13 +27,16 @@
     <p class="boasVindas">🌟 Bem-vindo ao nosso site! 🌟</p> <!-- Mensagem de boas-vindas -->
   </header>
 
+
+
   <!-- Navegação superior -->
   <nav class="topnav">
     <!-- Menu de navegação com links -->
-    <a href="#">LINKS</a>
-    <a href="#">PROJETOS</a>
-    <a href="#">CONTATOS</a>
-    <a href="#" class="nav-direita">Link</a> <!-- Link alinhado à direita -->
+    <a href="#coluna-links">LINKS</a>
+    <a href="#coluna-projetos">PROJETOS</a>
+
+      <!-- Link alinhado à direita -->
+     <a href="#footer-contato" class="nav-direita">CONTATOS</a> 
   </nav>
 
   <!-- Container principal com duas colunas -->
@@ -74,7 +77,7 @@
   </main>
 
   <!-- Rodapé com direitos autorais -->
-  <footer>
+  <footer id="footer-contato">
     <p>&copy; 2025 - Todos os direitos reservados</p>
     <p>Contato: (91) 99242-0981
   </footer>
