--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <title>AristidesBP// Portifólio</title>
 <link href="https://fonts.googleapis.com/css2?family=DM+Sans&family=Gemunu+Libre:wght@200&display=swap" rel="stylesheet"/>
 <script src="https://unpkg.com/scrollreveal"></script>  
-<link rel="stylesheet" href="css/index.css" />
+<link rel="stylesheet" href="css/index2.css" />
 </head>
 <body>
 
