--- a/index.html
+++ b/index.html
@@ -42,21 +42,36 @@
   <!-- Container principal com duas colunas -->
   <main class="container">
 
-    <!-- Coluna de links úteis -->
+
+        
+    <!-- Coluna de paltaformas ########################################################################### -->
     <section class="column" id="coluna-links">
-      <h2>LINKS</h2>
+      <h2>PLATAFORMAS</h2>
       <ul class="lista-links">
         <!-- Lista de links úteis -->
         <li><a href="https://github.com/aristidesbp" target="_blank">GitHub</a></li>
         <li><a href="https://gemini.google.com/app?hl=pt-BR" target="_blank">Gemini</a></li>
         <li><a href="https://chatgpt.com/" target="_blank">ChatGPT</a></li>
+      </ul>
+    </section>
+
+
+      <!-- Coluna de links úteis ########################################################################### -->
+    <section class="column" id="coluna-links">
+      <h2>LINKS/AULAS</h2>
+      <ul class="lista-links">
+        <!-- Lista de links úteis -->
+        <li><a href="https://aprendamais.mec.gov.br/" target="_blank">aprendamais.mec.gov</a></li>
+         <li><a href="https://www.escolavirtual.gov.br/" target="_blank">escolavirtual.gov</a></li>
+          <li><a href="https://estude.ifrs.edu.br/" target="_blank">estude.ifrs</a></li>
+          
         <li><a href="https://www.w3schools.com/" target="_blank">W3Schools</a></li>
         <li><a href="https://developer.mozilla.org/" target="_blank">MDN Web Docs</a></li>
         <li><a href="https://www.freecodecamp.org/" target="_blank">freeCodeCamp</a></li>
       </ul>
     </section>
 
-    <!-- Coluna de projetos -->
+    <!-- Coluna de projetos ########################################################################### -->
     <section class="column" id="coluna-projetos">
       <h2>PROJETOS</h2>
       <ul class="lista-links">
