--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
   <!-- Navegação superior -->
   <nav class="topnav">
     <!-- Menu de navegação com links -->
-    <a href="#PLATAFORMAS">PLATAFORMAS</a>
     <a href="#CURSOS">CURSOS</a>
+    <a href="#PLATAFORMAS">PLATAFORMAS</a>
     <a href="#coluna-projetos">TESTES/PROJETOS</a>
     <!-- Link alinhado à direita -->
      <a href="#footer-contato" class="nav-direita">CONTATOS</a> 
@@ -49,11 +49,11 @@
         <!-- Lista de links úteis -->
         <li><a href="https://aprendamais.mec.gov.br/" target="_blank">aprendamais.mec.gov</a></li>
          <li><a href="https://www.escolavirtual.gov.br/" target="_blank">escolavirtual.gov</a></li>
-          <li><a href="https://estude.ifrs.edu.br/" target="_blank">estude.ifrs</a></li>
-          
+          <li><a href="https://estude.ifrs.edu.br/" target="_blank">estude.ifrs</a></li>     
         <li><a href="https://www.w3schools.com/" target="_blank">W3Schools</a></li>
         <li><a href="https://developer.mozilla.org/" target="_blank">MDN Web Docs</a></li>
         <li><a href="https://www.freecodecamp.org/" target="_blank">freeCodeCamp</a></li>
+        <li><a href="aulas-txt.html" target="_blank">MATERIAL.txt</a></li>
       </ul>
     </section>
 
@@ -77,7 +77,7 @@
         <!-- Lista de projetos com links -->
         <li><a href="https://sites.google.com/view/marketing-digital-abp/sobre" target="_blank">Portfólio Google Sites</a></li>
         <li><a href="index-com-radio.html" target="_blank">index-com-radio.html</a></li>
-        <li><a href="aulas-txt.html" target="_blank">editor-de-txt.html</a></li>
+        
         <li><a href="index-basico-radio.html" target="_blank">index-basico-radio.html</a></li>
         <li><a href="ler-arquivo-json.html" target="_blank">ler-arquivo-json.html</a></li>
         <li><a href="lista-de-tarefas.html" target="_blank">lista-de-tarefas.html</a></li>
