--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8"> <!-- Define a codificação do documento como UTF-8 -->
-  <meta http-equiv="refresh" content="0;portifolio/index.html"> <!-- Redireciona imediatamente para outra URL -->
+  <meta http-equiv="refresh" content="0;projetos/portifolio/index.html"> <!-- Redireciona imediatamente para outra URL -->
   <title>Redirecionando...</title> <!-- Título da aba do navegador -->
 </head>
 <body>
