--- a/projetos/portifolio/aulas-txt.html
+++ b/projetos/portifolio/aulas-txt.html
@@ -27,7 +27,7 @@
     
   <!-- criando um select para navegar entre os conteudos -->  
  <select id="seletor-arquivo" onchange="carregarArquivoSelecionado()">
-<option value="txt/python.txt">linux-mint.txt</option>
+<option value="txt/linux-mint.txt">linux-mint.txt</option>
 <option value="txt/termux.txt">termux.txt</option>      
 <option value="txt/git-github.txt">git-github.txt</option>
 <option value="txt/python.txt">python.txt</option>
