--- a/projetos/abp-site/index.html
+++ b/projetos/abp-site/index.html
@@ -45,9 +45,19 @@
 </head>
 
 <body>
-  <h1>Olá, eu sou o Aristides 👨‍💻</h1> <!-- Exibição principal -->
-  <p>Sou desenvolvedor front-end e gestor de tráfego pago. Bem-vindo ao meu portfólio!</p>
-</body>
+  <!-- Componente de Cabeçalho -->
+  <div id="header"></div> <!-- Será preenchido com o conteúdo de header.html via DOM -->
 
+  <!-- Área principal -->
+  <main id="app">
+    <!-- Aqui será renderizado o conteúdo dinâmico da view.js -->
+  </main>
+
+  <!-- Scripts MVC -->
+  <script src="./assets/js/model.js" type="module"></script>
+  <script src="./assets/js/view.js" type="module"></script>
+  <script src="./assets/js/controller.js" type="module"></script>
+  
+</body>
 </html>
 
