--- a/projetos/abp-site/index.html
+++ b/projetos/abp-site/index.html
@@ -38,7 +38,7 @@
   <link href="https://fonts.googleapis.com/css2?family=DM+Sans&display=swap" rel="stylesheet">
 
   <!-- CSS externo -->
-  <link rel="stylesheet" href="./assets/css/style.css">
+  <link rel="stylesheet" href="./assets/css/style.css" />
 
   <!-- JS externo -->
   <script type="module" src="./assets/js/main.js" defer></script>
