--- a/index.html
+++ b/index.html
@@ -1,18 +1,41 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
+<!DOCTYPE html> <!-- Documento HTML5 -->
+<html lang="pt-BR"> <!-- Idioma português do Brasil -->
+
 <head>
-<link rel="preconnect" href="https://fonts.googleapis.com" />
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="description" content="Portifólio de Aristides Barbosa Pontes, desenvolvedor web Front-end" />
-    <meta name="author" content="Aristides Barbosa Pontes" />
-    <meta property="og:description" content="Portifólio de Aristides Barbosa Pontes, desenvolvedor web Front-end" />
-    <meta property="og:type" content="website" />
-    <meta name="keywords" content="developer, programação, dev, desenvolvedor, programador, html, css, javascript, nodejs, reactjs, react, github, frontend, front-end" />
-    <meta name="robots" content="index" />
-    <title>AristidesBP// Portifólio</title>
+  <!-- SEO e configuração básica -->
+  <meta charset="UTF-8"> <!-- Permite acentos e caracteres especiais -->
+  <meta http-equiv="X-UA-Compatible" content="IE=edge"> <!-- Compatível com IE -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Responsivo -->
+
+  <title>Portfólio de Aristides Barbosa Pontes – Dev & Tráfego Pago</title> <!-- Título da aba do navegador -->
+
+  <meta name="description" content="Sou Aristides Barbosa Pontes, desenvolvedor front-end e gestor de tráfego pago. Veja meu portfólio com projetos web e estratégias de marketing digital."> <!-- Descrição nos buscadores -->
+  <meta name="author" content="Aristides Barbosa Pontes"> <!-- Autor -->
+  <meta name="keywords" content="portfólio, Aristides Barbosa Pontes, front-end, tráfego pago, HTML, CSS, JavaScript, AndroidIDE, sites, desenvolvedor"> <!-- Palavras-chave -->
+  <meta name="robots" content="index, follow"> <!-- Permite indexar e seguir links -->
+
+  <!-- Canonical -->
+  <link rel="canonical" href="https://www.seusite.com.br/">
+
+  <!-- Open Graph (Facebook, LinkedIn) -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://www.seusite.com.br/">
+  <meta property="og:title" content="Portfólio de Aristides Barbosa Pontes">
+  <meta property="og:description" content="Desenvolvedor Front-end e Gestor de Tráfego. Conheça meus projetos.">
+  <meta property="og:image" content="./assets/images/imagem-perfil.png">
+
+  <!-- Twitter Cards -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Portfólio de Aristides Barbosa Pontes">
+  <meta name="twitter:description" content="Desenvolvedor Front-end e Gestor de Tráfego. Confira meus projetos.">
+  <meta name="twitter:image" content="./assets/images/imagem-perfil.png">
+  <meta name="twitter:site" content="@aristidesbp">
+
+  <!-- Favicon -->
+  <link rel="icon" href="./assets/icons/favicon.png" type="image/png">
+
+<!-- Fonte externa (opcional) -->
+<link href="https://fonts.googleapis.com/css2?family=DM+Sans&display=swap" rel="stylesheet">   
 <link href="https://fonts.googleapis.com/css2?family=DM+Sans&family=Gemunu+Libre:wght@200&display=swap" rel="stylesheet"/>
 <script src="https://unpkg.com/scrollreveal"></script> 
 
