--- a/header.html
+++ b/header.html
@@ -13,7 +13,7 @@
 <select id="seletorConteudo" onchange="trocarConteudo()">
 <option value="#">MENU</option>
 
-<option value="abpLinks.html"> meus links </option>
+<option value="html/lista-de-links"> meus links </option>
 <option value="#"> Cursos com certificado </option>
 <option value="#"> Meus testes e projetos </option>
 
