--- a/index.html
+++ b/index.html
@@ -63,21 +63,21 @@
 <!-- 🧠 ARQUIVOS EXTERNOS JAVASCRIPT -->
 <script src="https://unpkg.com/scrollreveal"></script><!-- Biblioteca para animações de scroll -->
 <script src="js/site-mvc-main.js" type="module" defer></script><!-- Script principal em módulo ES6, carregado ao final -->
-<script src="https://unpkg.com/scrollreveal"></script> 
+
 
 <!-- 🧠 Manifest (para Progressive Web Apps – PWA) -->
 <link rel="manifest" href="json/site-mvc-manifest.json">
-</head>
+</head> 
 <body>
 
 <!-- Div onde o conteúdo será carregado -->
-<div class="meu-header" id="meu-header">Carregando header...</div>
+<header id="meu-header">Carregando header...</header>
+ 
+<!-- Div onde o conteúdo será carregado -->
+<main id="conteudo">Carregando conteúdo...</main> 
   
 <!-- Div onde o conteúdo será carregado -->
-<div id="conteudo">Carregando conteúdo...</div> 
-  
-<!-- Div onde o conteúdo será carregado -->
-<div class="meu-footer" id="meu-footer">Carregando footer...</div>
+<footer class="meu-footer" id="meu-footer">Carregando footer...</footer>
 
 
 
