--- a/header.html
+++ b/header.html
@@ -1,6 +1,6 @@
 <!-- ################ imagem da Logo azul abaixo  da navebar/menu ######################### -->
 <div style="background-color: #02133e; text-align: center; padding: 20px;"><br>
-<img id="inicio" src="img/logoAbp.png" alt="Logo" style="max-width: auto; height: auto;">
+<img id="inicio" src="img/logoAbp.png" alt="Logo" style="max-width: 100px; height: 200px;">
 </div>
 
 <!-- Barra de navegação -->
