--- a/header.html
+++ b/header.html
@@ -1,8 +1,3 @@
-<!-- ################ imagem da Logo azul abaixo  da navebar/menu ######################### -->
-<div style="background-color: #02133e; text-align: center; padding: 20px;"><br>
-<img id="inicio" src="img/logoAbp.png" alt="Logo" style="max-width: 100px; height: 200px;">
-</div>
-
 <!-- Barra de navegação -->
 <div class="navbar">
 <div class="navbar-left">           
@@ -13,7 +8,7 @@
 <select id="seletorConteudo" onchange="trocarConteudo()">
 <option value="#">MENU</option>
 
-<option value="html/lista-de-links"> meus links </option>
+<option value="html/lista-de-links.html"> meus links </option>
 <option value="#"> Cursos com certificado </option>
 <option value="#"> Meus testes e projetos </option>
 
