--- a/header.html
+++ b/header.html
@@ -1,10 +1,24 @@
-<!-- Barra de navegação -->
+
+
+
+<!-- 🎯 Seletor de páginas -->
+  <select id="seletorConteudo">
+    <option value="sobre.html">Sobre</option>
+    <option value="contato.html">Contato</option>
+    <option value="servicos.html">Serviços</option>
+   <option value="html/lista-de-links.html"> meus links </option>
+<option value="#"> Cursos com certificado </option>
+<option value="#"> Meus testes e projetos </option>
+  </select>
+
+
+<!-- Barra de navegação 
 <div class="navbar">
 <div class="navbar-left">           
 <a class="nav-link" href="index.html"><b>HOME</b></a>
 <a class="nav-link" href="#contato"><b>CONTATO</b></a>
 
-<!-- Lista suspensa para trocar os conteúdos -->
+ Lista suspensa para trocar os conteúdos 
 <select id="seletorConteudo" onchange="trocarConteudo()">
 <option value="#">MENU</option>
 
@@ -15,7 +29,4 @@
  
 </select>
 </div>
-</div>
-
-
-
+</div> -->
