--- a/header.html
+++ b/header.html
@@ -2,7 +2,7 @@
 
 
 <!-- 🎯 Seletor de páginas -->
-  <select id="seletorConteudo">
+ <select id="seletorConteudo" onchange="trocarConteudo()">
     <option value="sobre.html">Sobre</option>
     <option value="contato.html">Contato</option>
     <option value="servicos.html">Serviços</option>
