--- a/header.html
+++ b/header.html
@@ -3,30 +3,10 @@
 
 <!-- 🎯 Seletor de páginas -->
  <select id="seletorConteudo" onchange="trocarConteudo()">
-    <option value="sobre.html">Sobre</option>
-    <option value="contato.html">Contato</option>
-    <option value="servicos.html">Serviços</option>
-   <option value="html/lista-de-links.html"> meus links </option>
-<option value="#"> Cursos com certificado </option>
-<option value="#"> Meus testes e projetos </option>
+    <option value="sobre.html">HOME</option>
+    <option value="#contato">Contato</option>
+    <option value="html/lista-de-links.html"> meus links </option>
   </select>
 
 
-<!-- Barra de navegação 
-<div class="navbar">
-<div class="navbar-left">           
-<a class="nav-link" href="index.html"><b>HOME</b></a>
-<a class="nav-link" href="#contato"><b>CONTATO</b></a>
 
- Lista suspensa para trocar os conteúdos 
-<select id="seletorConteudo" onchange="trocarConteudo()">
-<option value="#">MENU</option>
-
-<option value="html/lista-de-links.html"> meus links </option>
-<option value="#"> Cursos com certificado </option>
-<option value="#"> Meus testes e projetos </option>
-
- 
-</select>
-</div>
-</div> -->
