--- a/header.html
+++ b/header.html
@@ -1,12 +1,12 @@
+<select id="seletorConteudo" onchange="trocarConteudo()">
+<!-- 🎯 link das páginas html -->
+<option value="sobre.html">HOME</option>
+<option value="#contato">Contato</option>
+<option value="html/lista-de-links.html"> meus links </option>
+<option value="md/cursoMd.md"> meus links </option>
 
-
-
-<!-- 🎯 Seletor de páginas -->
- <select id="seletorConteudo" onchange="trocarConteudo()">
-    <option value="sobre.html">HOME</option>
-    <option value="#contato">Contato</option>
-    <option value="html/lista-de-links.html"> meus links </option>
-  </select>
+ 
+</select>
 
 
 
