--- a/header.html
+++ b/header.html
@@ -3,7 +3,7 @@
 <option value="sobre.html">HOME</option>
 <option value="#contato">Contato</option>
 <option value="html/lista-de-links.html"> meus links </option>
-<option value="md/cursoMd.md"> meus links </option>
+<option value="md/cursoMd.md">cursoMd.md</option>
 
  
 </select>
