--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
 <!-- 🧠 ARQUIVOS EXTERNOS JAVASCRIPT -->
 <script src="https://unpkg.com/scrollreveal"></script><!-- Biblioteca para animações de scroll -->
 <script src="js/site-mvc-main.js" type="module" defer></script><!-- Script principal em módulo ES6, carregado ao final -->
+<script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 
 
 <!-- 🧠 Manifest (para Progressive Web Apps – PWA) -->
