--- a/header.html
+++ b/header.html
@@ -1,12 +1,16 @@
+<!-- 🎯 link das páginas html 
 <select id="seletorConteudo" onchange="trocarConteudo()">
-<!-- 🎯 link das páginas html -->
 <option value="sobre.html">HOME</option>
 <option value="#contato">Contato</option>
 <option value="html/lista-de-links.html"> meus links </option>
 <option value="md/cursoMd.md">cursoMd.md</option>
+</select> -->
 
- 
+
+<select id="seletorConteudo">
+  <option value="sobre.html">HOME</option>
+  <option value="html/lista-de-links.html">Meus Links</option>
+  <option value="contato.html">Contato</option>
+  <option value="md/cursoMd.md">Curso em Markdown</option> <!-- Agora renderiza Markdown corretamente -->
 </select>
-
-
 
