--- a/header.html
+++ b/header.html
@@ -4,7 +4,7 @@
 <option value="html/lista-de-links.html">Meus Links</option>
 <option value="contato.html">Contato</option>
 <option value="md/cursoMd.md">Curso em Markdown</option> 
-<option value="doc-site.md">documnetação do site</option> 
+<option value="md/doc-site.md">documnetação do site</option> 
 
   
 <!-- fim da lista -->  
