--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
 <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.3/font/bootstrap-icons.min.css" rel="stylesheet"> 
 <link href="icons/favicon.png" type="image/x-icon" rel="shortcut icon"/><!-- Estilo CSS externo -->
 <link href="style.css" rel="stylesheet">
+<link rel="stylesheet" href="markdown.css">
+
 
  <!-- 🧠 Manifest (para Progressive Web Apps – PWA) -->
 <link rel="manifest" href="json/site-mvc-manifest.json">
