--- a/header.html
+++ b/header.html
@@ -5,7 +5,7 @@
 <option value="contato.html">Contato</option>
 <option value="md/cursoMd.md">Curso em Markdown</option> 
 <option value="md/doc-site.md">documnetação do site</option> 
-
+<option value="md/teste.md">teste</option> 
   
 <!-- fim da lista -->  
 </select>
