--- a/index.html
+++ b/index.html
@@ -66,14 +66,22 @@
 </head> 
 <body>
 
-<!-- Div onde o conteúdo será carregado -->
-<header id="meu-header">Carregando header...</header>
+
  
-<!-- Div onde o conteúdo será carregado -->
-<main id="conteudo">Carregando conteúdo...</main> 
-  
-<!-- Div onde o conteúdo será carregado -->
-<footer class="meu-footer" id="meu-footer">Carregando footer...</footer>
+ <!-- Container principal da página -->
+  <div id="pagina">
+    
+    <!-- Cabeçalho da página -->
+    <h1>Bem-vindo ao Meu Site</h1>
+    <header id="meu-header"></header>
+
+    <!-- Conteúdo principal -->
+    <main id="conteudo"></main>
+
+    <!-- Rodapé da página -->
+    <footer id="meu-footer"></footer>
+    
+  </div>
 
 
 
