--- a/header.html
+++ b/header.html
@@ -1,12 +1,79 @@
-<select id="seletorConteudo">
-<!-- 🎯 link das páginas html -->
-<option value="sobre.html">HOME</option>
-<option value="html/lista-de-links.html">Meus Links</option>
-<option value="contato.html">Contato</option>
-<option value="md/cursoMd.md">Curso em Markdown</option> 
-<option value="md/doc-site.md">documnetação do site</option> 
-<option value="md/teste.md">teste</option> 
-  
-<!-- fim da lista -->  
-</select>
+
+
+
+<style>
+
+.vertical-menu {
+
+  width: 200px;
+
+}
+
+​
+
+.vertical-menu a {
+
+  background-color: #eee;
+
+  color: black;
+
+  display: block;
+
+  padding: 12px;
+
+  text-decoration: none;
+
+}
+
+​
+
+.vertical-menu a:hover {
+
+  background-color: #ccc;
+
+}
+
+​
+
+.vertical-menu a.active {
+
+  background-color: #04AA6D;
+
+  color: white;
+
+}
+
+</style>
+
+
+
+​
+
+<h1>Vertical Menu</h1>
+
+​
+
+<div class="vertical-menu">
+
+  <a href="#" class="active">Home</a>
+
+  <a href="#">Link 1</a>
+
+  <a href="#">Link 2</a>
+
+  <a href="#">Link 3</a>
+
+  <a href="#">Link 4</a>
+
+</div>
+
+​
+
+</body>
+
+</html>
+
+​
+
+
 
