--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
 
 
-<stayle>
+<style>
 /* 🌐 CONFIGURAÇÕES GERAIS DA PÁGINA */
 * {
   margin: 0;                              /* Remove margens padrão */
@@ -81,7 +81,7 @@ body {
   height: 100vh;                          /* Garante altura total da tela */
 }
 
-</stayle>
+</style>
 </head> 
 <body>
 
